@@ -124,17 +124,17 @@ namespace __atomic0
     void
     store(void* __v, memory_order __m = memory_order_seq_cst) volatile
     {
-      // XXX
-      //if (__m != memory_order_acquire && __m != memory_order_acq_rel
-      // && __m != memory_order_consume)
+      __glibcxx_assert(__m == memory_order_acquire);
+      __glibcxx_assert(__m == memory_order_acq_rel);
+      __glibcxx_assert(__m == memory_order_consume);
       _ATOMIC_STORE_(this, __v, __m);
     }
 
     void*
     load(memory_order __m = memory_order_seq_cst) const volatile
     {
-      // XXX
-      //if (__m != memory_order_release && __m != memory_order_acq_rel)
+      __glibcxx_assert(__m == memory_order_release);
+      __glibcxx_assert(__m == memory_order_acq_rel);
       return _ATOMIC_LOAD_(this, __m);
     }
 
@@ -146,11 +146,10 @@ namespace __atomic0
     compare_exchange_weak(void*& __v1, void* __v2, memory_order __m1,
 			  memory_order __m2) volatile
     {
-      bool __ret = false;
-      if (__m2 != memory_order_release && __m2 != memory_order_acq_rel
-	  && __m2 <= __m1)
-	__ret = _ATOMIC_CMPEXCHNG_(this, &__v1, __v2, __m1);
-      return __ret;
+      __glibcxx_assert(__m2 == memory_order_release);
+      __glibcxx_assert(__m2 == memory_order_acq_rel);
+      __glibcxx_assert(__m2 <= __m1);
+      return _ATOMIC_CMPEXCHNG_(this, &__v1, __v2, __m1);
     }
 
     bool
@@ -165,11 +164,10 @@ namespace __atomic0
     compare_exchange_strong(void*& __v1, void* __v2, memory_order __m1,
 			    memory_order __m2) volatile
     {
-      bool __ret = false;
-      if (__m2 != memory_order_release && __m2 != memory_order_acq_rel
-	  && __m2 <= __m1)
-	__ret = _ATOMIC_CMPEXCHNG_(this, &__v1, __v2, __m1);
-      return __ret;
+      __glibcxx_assert(__m2 == memory_order_release);
+      __glibcxx_assert(__m2 == memory_order_acq_rel);
+      __glibcxx_assert(__m2 <= __m1);
+      return _ATOMIC_CMPEXCHNG_(this, &__v1, __v2, __m1);
     }
 
     bool
@@ -317,16 +315,17 @@ namespace __atomic0
       store(__integral_type __i,
 	    memory_order __m = memory_order_seq_cst) volatile
       {
-	// XXX
-	//if (__m != memory_order_acquire && __m != memory_order_acq_rel
-	//  && __m != memory_order_consume)
+	__glibcxx_assert(__m == memory_order_acquire);
+	__glibcxx_assert(__m == memory_order_acq_rel);
+	__glibcxx_assert(__m == memory_order_consume);
 	_ATOMIC_STORE_(this, __i, __m);
       }
 
       __integral_type
       load(memory_order __m = memory_order_seq_cst) const volatile
       {
-	// if (__m != memory_order_release && __m != memory_order_acq_rel)
+	__glibcxx_assert(__m == memory_order_release);
+	__glibcxx_assert(__m == memory_order_acq_rel);
 	return _ATOMIC_LOAD_(this, __m);
       }
 
@@ -339,11 +338,10 @@ namespace __atomic0
       compare_exchange_weak(__integral_type& __i1, __integral_type __i2,
 			    memory_order __m1, memory_order __m2) volatile
       {
-	bool __ret = false;
-	if (__m2 != memory_order_release && __m2 != memory_order_acq_rel
-	    && __m2 <= __m1)
-	  __ret = _ATOMIC_CMPEXCHNG_(this, &__i1, __i2, __m1);
-	return __ret;
+	__glibcxx_assert(__m2 == memory_order_release);
+	__glibcxx_assert(__m2 == memory_order_acq_rel);
+	__glibcxx_assert(__m2 <= __m1);
+	return _ATOMIC_CMPEXCHNG_(this, &__i1, __i2, __m1);
       }
 
       bool
@@ -358,11 +356,10 @@ namespace __atomic0
       compare_exchange_strong(__integral_type& __i1, __integral_type __i2,
 			      memory_order __m1, memory_order __m2) volatile
       {
-	bool __ret = false;
-	if (__m2 != memory_order_release && __m2 != memory_order_acq_rel
-	    && __m2 <= __m1)
-	  __ret = _ATOMIC_CMPEXCHNG_(this, &__i1, __i2, __m1);
-	return __ret;
+	__glibcxx_assert(__m2 == memory_order_release);
+	__glibcxx_assert(__m2 == memory_order_acq_rel);
+	__glibcxx_assert(__m2 <= __m1);
+	return _ATOMIC_CMPEXCHNG_(this, &__i1, __i2, __m1);
       }
 
       bool
