@@ -271,6 +271,34 @@ namespace std
 # define _GLIBCXX_WEAK_DEFINITION
 #endif
 
+// Assert.
+// Avoid the use of assert, because we're trying to keep the <cassert>
+// include out of the mix.
+#if !defined(_GLIBCXX_DEBUG) && !defined(_GLIBCXX_PARALLEL)
+#define __glibcxx_assert(_Condition)
+#else
+_GLIBCXX_BEGIN_NAMESPACE(std)
+  // Avoid the use of assert, because we're trying to keep the <cassert>
+  // include out of the mix.
+  inline void
+  __replacement_assert(const char* __file, int __line, 
+		       const char* __function, const char* __condition)
+  {
+    __builtin_printf("%s:%d: %s: Assertion '%s' failed.\n", __file, __line,
+		     __function, __condition);
+    __builtin_abort();
+  }
+_GLIBCXX_END_NAMESPACE
+
+#define __glibcxx_assert(_Condition)                               	\
+  do 								        \
+  {							      		\
+    if (! (_Condition))                                                 \
+      std::__replacement_assert(__FILE__, __LINE__, 			\
+				__PRETTY_FUNCTION__, #_Condition);	\
+  } while (false)
+#endif
+
 // The remainder of the prewritten config is automatic; all the
 // user hooks are listed above.
 
