@@ -52,7 +52,6 @@
 
 #include <stdatomic.h>
 #include <cstddef>
-#include <cassert> // XXX static_assert vs. constant-expression PR38502
 
 _GLIBCXX_BEGIN_NAMESPACE(std)
 
